@@ -16,6 +16,6 @@ unix:linux-g++:LIBS += -ldl
 
 # FreeBSD options
 unix:freebsd-g++:INCLUDEPATH += /usr/X11R6/include
-unix:freebsd-g++:INCLUDEPATH += /usr/local/include/db42
-unix:freebsd-g++:LIBS += -L/usr/local/lib/db42
+unix:freebsd-g++:INCLUDEPATH += /usr/local/include/db43
+unix:freebsd-g++:LIBS += -L/usr/local/lib/db43
 
